# docassemble-ADivorceAgreement

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
docassemble/ADivorceAgreement/data/questions/: a_divorce_agreement.yml  divorceagreement.yml
docassemble/ADivorceAgreement/data/templates/: a_divorce_agreement.docx  a_divorce_agreement_next_steps.docx
