[build-system]
requires = [
    "setuptools==80.9.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "docassemble.ADivorceAgreement"
version = "1.0"
description = "1A Divorce Agreement"
readme = "README.md"
authors = [
    { name = "", email = "alara.akisik@su.suffolk.edu" },
]
dependencies = [
    "docassemble.ALMassachusetts>=0.1.2",
    "docassemble.AssemblyLine @ git+https://github.com/SuffolkLITLab/docassemble-AssemblyLine.git@main",
]
license = "MIT"
license-files = [
    "LICENSE",
]

[project.urls]
Homepage = "https://courtformsonline.org"

[tool.setuptools.packages.find]
where = [
    ".",
]
